# erobs

./: .gitignore  README.md  build.sh  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yaml  ros.yaml  ruff.yml  super-linter.yml
docker/: README.md
docker/erobs-common-img/: Dockerfile  README.md
docker/ur-driver/: Dockerfile  entrypoint.sh
docker/ur-moveit/: Dockerfile
scripts/pdf-launch-scripts/: simple_listener.py
src/: ARCHITECTURE_NOTES.md  ros2.repos
src/aruco_pose/launch/: aruco_pose.launch.py
src/aruco_pose/src/: redis_insert.py
src/bluesky_ros/: ophyd_ros.py  pdf_beamtime.py  pdf_beamtime_demo.py  re_demo.py
src/custom-ur-descriptions/pipette_description/: CMakeLists.txt  README.md  package.xml
src/custom-ur-descriptions/pipette_description/config/: pipette_controllers.yaml
src/custom-ur-descriptions/pipette_description/launch/: pipette_driver_display.launch.py
src/custom-ur-descriptions/pipette_description/urdf/: pipette.ros2_control.xacro  pipette.urdf.xacro  pipette_macro.urdf.xacro
src/custom-ur-descriptions/pipette_moveit_config/: CMakeLists.txt  README.md  package.xml
src/custom-ur-descriptions/pipette_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
src/custom-ur-descriptions/pipette_moveit_config/launch/: driver_with_rviz.launch.py  slider_control.launch.py
src/custom-ur-descriptions/pipette_moveit_config/rviz/: moveit.rviz
src/custom-ur-descriptions/pipette_moveit_config/srdf/: pipette.srdf
src/custom-ur-descriptions/ur3e_hande_robot_description/launch/: ur_control.launch.py
src/custom-ur-descriptions/ur5e_hande_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/custom-ur-descriptions/ur5e_hande_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro  ur_hande_controllers.yaml
src/custom-ur-descriptions/ur5e_hande_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/custom-ur-descriptions/ur5e_hande_robot_description/: CMakeLists.txt  README.md  package.xml
src/custom-ur-descriptions/ur5e_hande_robot_description/config/camera_mount/: physical_parameters.yaml
src/custom-ur-descriptions/ur5e_hande_robot_description/config/hande/: physical_parameters.yaml  visual_parameters.yaml
src/custom-ur-descriptions/ur5e_hande_robot_description/config/ur5e/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml
src/custom-ur-descriptions/ur5e_hande_robot_description/meshes/tool_exchanger/: TripleA robotics_WM1-P-01-01-01 Robot Part_PATENTED.stp  TripleA robotics_WM1-P-02-01-01 Tool Part_PATENTED.stp
src/custom-ur-descriptions/ur5e_hande_robot_description/urdf/: camera_mount.xacro  tool_exchanger.xacro  ur_with_camera_hande.xacro  ur_with_epick.xacro  ur_with_hande.urdf  ur_with_hande.xacro  ur_with_toolexchanger.urdf  ur_with_toolexchanger.xacro
src/custom-ur-descriptions/ur5e_moveit_configs/ur_standalone_moveit_config/launch/: robot_bringup.launch.py
src/custom-ur-descriptions/ur5e_moveit_configs/ur_zivid_epick_moveit_config/launch/: robot_bringup.launch.py
src/custom-ur-descriptions/ur5e_moveit_configs/ur_zivid_hande_moveit_config/launch/: robot_bringup.launch.py
src/custom-ur-descriptions/ur5e_pipette_moveit_config/: CMakeLists.txt  DO_NOT_USE_YET.txt  README.md  package.xml
src/custom-ur-descriptions/ur5e_pipette_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ur_pipette_controllers.yaml
src/custom-ur-descriptions/ur5e_pipette_moveit_config/launch/: demo.launch.py  move_group.launch.py  pipette_demo.launch.py  setup_assistant.launch.py  ur5e_pipette_fake_hardware.launch.py  ur5e_pipette_real_hardware.launch.py
src/custom-ur-descriptions/ur5e_pipette_moveit_config/srdf/: ur.srdf
src/custom-ur-descriptions/ur5e_pipette_robot_description/: CMakeLists.txt  DO_NOT_USE_YET.txt  README.md  package.xml
src/custom-ur-descriptions/ur5e_pipette_robot_description/config/: initial_positions.yaml
src/custom-ur-descriptions/ur5e_pipette_robot_description/config/pipette/: default_kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/custom-ur-descriptions/ur5e_pipette_robot_description/launch/: display.launch.py
src/custom-ur-descriptions/ur5e_pipette_robot_description/meshes/: README.md
src/custom-ur-descriptions/ur5e_pipette_robot_description/urdf/: ur_with_pipette.xacro
src/demos/hello_moveit/launch/: pick_place_repeat.launch.py
src/demos/hello_moveit/src/: pick_place_repeat_client.py
src/end_effectors/: README.md  end_effectors.repos
src/end_effectors/epick_config/: CMakeLists.txt  package.xml
src/end_effectors/epick_config/launch/: epick_bringup.launch.py
src/end_effectors/epick_config/urdf/: epick_overlay.xacro
src/pdf/pdf_beamtime/acceptance_tests/: bluesky_interrupt_resume.py  bluesky_interrupt_stop.py
src/pdf/pdf_beamtime/launch/: pdf_beamtime.launch.py  pdf_beamtime_fidpose_server.launch.py
src/pdf/pdf_beamtime/src/: pdf_beamtime_client.py  pdf_beamtime_fidpose_client.py  pdf_beamtime_fidpose_redis_client.py
src/pdf_beamtime/src/: inner_state_machine.cpp
src/pipette_driver/: README.md  package.xml  setup.py
src/pipette_driver/pipette_driver/: joint_state_bridge.py  pipette_driver_node.py
src/pipette_driver/pipette_driver/arduino_server/: pipette_actuator_control.ino  sketch_jul14a.ino
src/pipette_driver/pipette_driver/test_scripts/: serial_terminal.py
