<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_pipette_robot_description</name>
  <version>1.0.0</version>
  <description>Complete robot description for UR5e arm with static pipette tool. Provides URDF model combining UR5e arm with pipette geometry for visualization and collision checking.</description>
  <maintainer email="xiao.yuan0217@gmail.com">eric</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>pipette_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>